Fix loading/saving of Greetings, fix scheduling of Greetings, cancelable tasks in scheduler, move to new Config scheme
Fix loading/saving of Greetings, fix scheduling of Greetings, cancelable tasks in scheduler, move to new Config scheme